<resources>
    <string name="app_name">Du An Mau Chinh</string>
    <string name="btnDangNhap">Đăng nhập</string>
    <string name="edtPassword">Nhập Password</string>
    <string name="edtUsername">Nhập Username</string>
    <string name="txtDangKy">Đăng ký</string>
    <string name="btnDangKy">Đăng ký</string>
    <string name="edtNhapLaiPass">Nhập lại Password</string>
    <string name="edtEmailMoi">Nhập Email</string>
    <string name="NguoiDung">Người dùng</string>
    <string name="TheLoai">Thể loại sách</string>
    <string name="Sach">Sách</string>
    <string name="HoaDon">Hóa đơn</string>
    <string name="BanChay">Bán chạy</string>
    <string name="ThongKe">Thống kê</string>
    <string name="title_activity_nguoi_dung">NguoiDungActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Xin chào</string>
    <string name="nav_header_subtitle">Đào Dũng</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btnThemTheLoai">Thêm thể loại</string>
    <string name="btnHuyTheLoai">Hủy bỏ</string>
    <string name="btnDanhSachTheLoai">Danh sách thể loại</string>
    <string name="btnThemSach">Thêm sách</string>
    <string name="btnDanhSachSach">Danh sách sách</string>
    <string name="btnThemHoaDon">Thêm hóa đơn</string>
    <string name="btnChonNgayHoaDon">Chọn ngày</string>
    <string name="edtMaHoaDon">Nhập mã hóa đơn</string>
    <string name="edtNgayMua">yyyy-MM-dd</string>
    <string name="edtMaSachHoaDon">Nhập mã sách</string>
    <string name="edtSoLuongMua">Số lượng mua</string>
    <string name="manifestLogin">Login</string>
    <string name="manifestSignUp">Sign Up</string>
    <string name="manifestBookCategory">Book Category</string>
    <string name="BookCategoryList">Book Category List</string>
    <string name="manifestBook">Book</string>
    <string name="BookList">Book List</string>
    <string name="manifestInvoice">Invoice</string>
    <string name="manifestStatistic">Statistic</string>
    <string name="manifestUserInformation">User Information</string>
    <string name="manifestBestSeller">Best Seller</string>
    <string name="manifestInvoiceList">Invoice List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edtHoTenMoi">Nhập Họ tên</string>
    <string name="btnCapNhatNguoiDung">Cập nhật</string>
    <string name="txtGioiThieu">Buy upgrade to full version - đ149.000</string>
    <string name="title_activity_hoa_don">HoaDonActivity</string>
    <string name="title_home">Hóa đơn</string>
    <string name="title_dashboard">Hóa đơn chi tiết</string>
    <string name="title_notifications">Danh sách</string>
    <string name="btnThemHDCT">Thêm hóa đơn chi tiết</string>
    <string name="edtPhoneMoi">Nhập số điện thoại</string>
    <string name="edtTenSach">Nhập tên sách</string>
    <string name="txtMaHoaDon">Mã hóa đơn:</string>
    <string name="txtNgayMua">Ngày đặt:</string>
    <string name="txtTest">Test</string>
    <string name="txtTestToast">Hello everybody im dao dung from kotlin android</string>
    <string name="edtCategoryName">Nhập tên thể loại mới</string>
    <string name="edtCategoryPosition">Nhập vị trí mới</string>
    <string name="edtCategoryDescribe">Nhập mô tả mới</string>
    <string name="txtCategoryID">Mã thể loại:</string>
    <string name="txtCategoryPosition">Vị trí:</string>
    <string name="txtCategoryName">Tên thể loại:</string>
    <string name="txtBookName">Tên sách:</string>
    <string name="txtBookAmount">Số lượng:</string>
    <string name="edtEditBookAuthor">Nhập tên tác giả mới</string>
    <string name="edtEditBookPrice">Nhập giá bìa mới</string>
    <string name="edtEditBookAmount">Nhập số lượng sách mới</string>
    <string name="edtEditBookName">Nhập tên sách mới</string>
    <string name="edtPassChinhSua">Nhập mật khẩu cũ</string>
    <string name="edtMatKhauMoi">Nhập mật khẩu mới</string>
</resources>
