<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HoaDon.HoaDonActivity"
        android:background="#ffffff">

    <ImageView
            android:layout_width="225dp"
            android:layout_height="94dp"
            app:srcCompat="@drawable/img_background"
            android:id="@+id/imageView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/edtMaHoaDon"
            android:id="@+id/edtMaHoaDon"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/edtNgayMua"
            android:id="@+id/edtNgayMua"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edtMaHoaDon"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnChonNgayHoaDon"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtMaSachHoaDon"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNgayMua"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:hint="@string/edtMaSachHoaDon"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtSoLuongMua"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtMaSachHoaDon"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:hint="@string/edtSoLuongMua"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <Button
            android:text="@string/btnChonNgayHoaDon"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnChonNgayHoaDon"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edtMaHoaDon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_button"
            android:layout_marginRight="20dp"/>

    <Button
            android:text="@string/btnThemHoaDon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:id="@+id/btnThemHoaDon"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtSoLuongMua"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_button"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>